--- a/index.html
+++ b/index.html
@@ -24,37 +24,39 @@
 
   <!--<script type="text/javascript" src="./static/js/jquery-1.3.2.min.js"></script>-->
     <!--<script type="text/javascript" src="./static/js/jquery-barcode.js"></script>-->
-  <script type="text/javascript" src="./static/js/sample/prototype.js"></script>
-  <script type="text/javascript" src="./static/js/prototype-barcode.js"></script>
+  <!--<script type="text/javascript" src="./static/js/sample/prototype.js"></script>-->
+  <!--<script type="text/javascript" src="./static/js/prototype-barcode.js"></script>-->
+
+  <script type="text/javascript" src="./static/js/datamatrix.js"></script>
 </head>
 
 <body style="width: 100%; height: 100%;">
 
   <div id="app"></div>
-  <div id="demo" style="position: fixed; bottom:0; left:0; z-index:999;"></div>
+<div id="demo"></div>
 </body>
 <script  type="text/javascript">
-  function demo () {
-    let value = 'demo';
-    let btype = 'datamatrix';
-    let settings = {
-      addQuietZone: false,
-      barHeight: '50',
-      barWidth: '1',
-      bgColor: '#FFFFFF',
-      color: '#ff0000',
-      fontSize: 10,
-      marginHRI: 5,
-      moduleSize: '5',
-      output: 'css',
-      posX: '10',
-      posY: '20',
-      showHRI: true
-    }
-    console.log(document.querySelector('#demo'))
-    document.querySelector('#demo').barcode(value, btype, settings);
-  }
-  demo();
+  // function demo () {
+  //   let value = 'demo';
+  //   let btype = 'datamatrix';
+  //   let settings = {
+  //     addQuietZone: false,
+  //     barHeight: '50',
+  //     barWidth: '1',
+  //     bgColor: '#FFFFFF',
+  //     color: '#ff0000',
+  //     fontSize: 10,
+  //     marginHRI: 5,
+  //     moduleSize: '5',
+  //     output: 'css',
+  //     posX: '10',
+  //     posY: '20',
+  //     showHRI: true
+  //   }
+  //   // console.log(document.querySelector('#demo'))
+  //    document.querySelector('#demo').barcode(value, btype, settings);
+  // }
+  // demo();
 </script>
 <!---->
 </html>
